Minor style changes.
Added a date to each pdf. Reinstated, in Section 7, the equations for the generalised connections in terms of the partial derivatives of the metric connection.

--- a/source/cadabra/Makefile
+++ b/source/cadabra/Makefile
@@ -133,7 +133,7 @@ clean:
 #-------------------------------------------------------------------------------
 veryclean:
 	@ make clean
-	@ for file in $(TARGETS); \
+	@ for file in $(TARGETS) sqrt-detg; \
 	  do \
 		  rm -rf $${file}.pdf; \
 		  rm -rf $${file}.cdb $${file}_.cdb $${file}_.txt; \
