Correct syntax errors on ::LaTeXForm and ::Indices for Cadabra 2.5.2
Prior to version 2.5.2 Cadabra would allow LaTeXForm{"foo"} but since 2.5.2 must use round brackets. Also, since 2.5.2, cannot have whitespace between ::Indices and the round brackets, must use ::Indices(foo). Ditto for other properties (e.g., LaTeXForm("foo")). These were errors on my part that earlier versions of Cadabra let slip through. But 2.5.2 closes these loopholes.

--- a/source/tex/Makefile
+++ b/source/tex/Makefile
@@ -6,6 +6,7 @@ SHELL = /bin/bash
 TARGETS = $(patsubst %.tex,%,$(wildcard paper.tex))
 #-------------------------------------------------------------------------------
 all:
+	@ make version
 	@ for file in $(TARGETS); \
 	  do \
 	     if ! [[ -e $${file}.aux ]]; then \
@@ -34,6 +35,7 @@ all:
 #-------------------------------------------------------------------------------
 version:
 	@ version.sh
+	@ rm -rf .paper
 #-------------------------------------------------------------------------------
 rm-dot:
 	@ for file in $(TARGETS); \
